# digitalme

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DigitalMe_项目介绍.pptx  Dockerfile  README.md  UAT_REPORT.md  config.py  conftest.py  docker-compose.yml  generator.py  graph.py  main.py  mock_data.py  pyproject.toml  requirements.txt  server.py  supervisor.py
dimensions/: __init__.py
dimensions/aging/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/cd/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/dr/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/gm/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/my/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/pf/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/smx/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/smy/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/sw/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/yc/: __init__.py  config.yaml  prompt.md  tools.py
dimensions/zl/: __init__.py  config.yaml  prompt.md  tools.py
docs/: DEPLOYMENT.md  report_types.md
skills/: cd_processor.md  cd_processor.py  extract_data_v1.md  extract_data_v1.py  extract_data_v2.md  extract_data_v2.py  extract_meta.md  extract_meta.py  pf_processor.md  pf_processor.py  zl_processor.md
static/: chat.html  mock_conversation.json
tests/: conftest.py  test_dimension_agents.py  test_dimension_tools.py  test_graph.py  test_integration.py  test_no_hardcoded_urls.py  test_registry.py  test_server.py  test_supervisor.py  test_tools.py  uat_playwright.py
(+39 files in other folders)
